# qmail-client

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
etc/ci/: before_deploy.sh
src/: client.rs  main.rs  search.rs
