[package]
name = "qmail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
imap = "2.4.1"
native-tls = "0.2.2"
utf7-imap = "0.2.0"
