[package]
name = "qmail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
imap = "2.4.1"
native-tls = "0.2.2"
utf7-imap = "0.2.0"
chrono = "0.4"
regex = "1"
mailparse = "0.13.8"
imap-proto = "0.10.2"
tabled = { version = "*", features = ["color"]}
owo-colors = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "4"
